                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 21-03-2005 changed: network.ipaddress infolabel prefixes "IP: " to the ip address.
  - 21-03-2005 fixed: Audio stream settings caused problems on saving video info if the audio stream was  stereo.  Plus, the stereo/left/right setting was not saved on a per-video basis.  Caused no audio on playback after the Audio options from the OSD had been accessed last time the video was played.
  - 21-03-2005 added: Options in settings.xml to adjust the max A/V and subs delays.
  - 21-03-2005 changed: Autorun priority runs: DVD->(S)VCD->PICTURE disc->Video->Music->Pictures.
  - 21-03-2005 fixed: [ 1165273 ] Resume Play doesn't work on stacked items.
  - 21-03-2005 fixed: Only the first item in a stacked video appeared in the database views.
  - 21-03-2005 removed: Fuzzy stacking.
  - 21-03-2005 fixed: Slideshow on a dir with just 1 item in it would cause a crash.
  - 21-03-2005 fixed: Homepage buttonscroller images were deallocated and reallocated every frame.  No decent workaround available at present, so they are always allocated.
  - 21-03-2005 fixed: After seek or ff/rw in music, first 1/4 of a second of audio is from another part of the file.
  - 21-03-2005 changed: Removed autosync=30 from mplayer.conf as it shouldn't be needed with the better audiorender accuracy.
  - 21-03-2005 changed: Improved xbmc's audio renderers accuracy in reporting correct amount in buffers. 
  - 20-03-2005 fixed: Htmlparser didnt account for a true ampersand (example: genre 'R&B' from allmusic.com was parsed as 'R')
  - 20-03-2005 fixed: [ 1166726 ] Playback of some AVI files is corrupted.